[package]
name = "sim-cli"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = { version = "1.0.69", features = ["backtrace"] }
clap = { version = "4.1.6", features = ["derive", "env", "std", "help", "usage", "error-context", "suggestions"], default-features = false }
serde = "1.0.183"
serde_json = "1.0.104"
sim-lib = { path = "../sim-lib" }
tokio = { version = "1.26.0", features = ["full"] }
