[package]
name = "sim-cli"
version = "0.1.1"
edition = "2021"
license = "MIT"
description = """
Instantly simulate real-world Lightning network activity
"""

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = { version = "1.0.69", features = ["backtrace"] }
clap = { version = "4.1.6", features = ["derive", "env", "std", "help", "usage", "error-context", "suggestions"], default-features = false }
dialoguer = "0.11.0"
log = "0.4.20"
triggered = "0.1.2"
serde = "1.0.183"
serde_json = "1.0.104"
simple_logger = "4.2.0"
simln-lib = { path = "../simln-lib" }
tokio = { version = "1.26.0", features = ["full"] }
bitcoin = { version = "0.30.1" }
ctrlc = "3.4.0"
rand = "0.8.5"
hex = {version = "0.4.3"}
futures = "0.3.30"
console-subscriber = { version = "0.4.0", optional = true}
tokio-util = { version = "0.7.13", features = ["rt"] }
openssl = { version = "0.10", features = ["vendored"] }

[features]
dev = ["console-subscriber"]
