[package]
name = "sim-lib"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = { version = "1.0.69", features = ["backtrace"] }
serde = { version="1.0.183", features=["derive"] }
serde_json = "1.0.104"
bitcoin = { version = "0.30.1", features=["serde"] }
lightning = { version = "0.0.116" }
tonic_lnd = { git = "https://github.com/fedimint/tonic_lnd", branch="master", features=["lightningrpc", "routerrpc"]}
async-trait = "0.1.73"
thiserror = "1.0.45"
log = "0.4.20"
triggered = "0.1.2"
mpsc = "0.2.0"
tokio = "1.31.0"
rand = "0.8.5"
hex = "0.4.3"
