[package]
name = "sim-lib"
version = "0.1.0"
edition = "2021"
description = """
Backend logic of the SimLN project. Contains all the functionality to build your own simulator
"""

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = { version = "1.0.69", features = ["backtrace"] }
cln-grpc = "0.1.3"
expanduser = "1.2.2"
serde = { version="1.0.183", features=["derive"] }
serde_json = "1.0.104"
bitcoin = { version = "0.30.1", features=["serde"] }
lightning = { version = "0.0.121" }
tonic_lnd = { package="fedimint-tonic-lnd", version="0.1.2", features=["lightningrpc", "routerrpc"]}
tonic = { version = "0.8", features = ["tls", "transport"] }
async-trait = "0.1.73"
thiserror = "1.0.45"
log = "0.4.20"
triggered = "0.1.2"
mpsc = "0.2.0"
tokio = "1.31.0"
rand = "0.8.5"
hex = "0.4.3"
csv = "1.2.2"
serde_millis = "0.1.1"
rand_distr = "0.4.3"
mockall = "0.12.1"

[dev-dependencies]
ntest = "0.9.0"